--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.7",
+    "method-override": "^3.0.0",
     "validator": "^13.6.0"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.24.2",
-    "nodemon": "^2.0.12"
+    "eslint-plugin-import": "^2.24.2", "nodemon": "^2.0.12"
   }
 }
