--- a/package.json
+++ b/package.json
@@ -24,15 +24,18 @@
     "body-parser": "^1.19.0",
     "celebrate": "^15.0.0",
     "express": "^4.17.1",
+    "express-winston": "^4.2.0",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.7",
     "method-override": "^3.0.0",
-    "validator": "^13.6.0"
+    "mongoose": "^6.0.7",
+    "validator": "^13.6.0",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.24.2", "nodemon": "^2.0.12"
+    "eslint-plugin-import": "^2.24.2",
+    "nodemon": "^2.0.12"
   }
 }
