--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "method-override": "^3.0.0",
     "mongoose": "^6.0.7",
     "validator": "^13.6.0",
-    "winston": "^3.3.3"
+    "winston": "^3.3.3",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
