--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "celebrate": "^15.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-winston": "^4.2.0",
     "helmet": "^4.6.0",
@@ -30,8 +32,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^6.0.7",
     "validator": "^13.6.0",
-    "winston": "^3.3.3",
-    "cors": "^2.8.5"
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
